--- a/precorsoLinux.html
+++ b/precorsoLinux.html
@@ -31,14 +31,14 @@ Questa parte del corso si pone l'obiettivo di familiarizzare gli studenti con il
 <BR>&nbsp;<BR>
 Dopo una prima lezione introduttiva (qui <A HREF="./Linux_CLI.pdf">le trasparenze</A>),
 i due incontri successivi si svolgeranno nelle aule informatiche F e G al
-primo piano interrato. Nelle aule sono disponibili computer. Per accedere utilizzate le credenziali che vi sono state consegnate
+primo piano interrato. Nelle aule sono disponibili computer che permettono di utilizzare sia Linux che Windows. Per accedere utilizzate le credenziali che vi sono state consegnate
 all'iscrizione. Il portatile personale potr&agrave; essere utilizzato solo al di fuori delle aule.
 <BR>&nbsp;<BR>
 Parleremo spesso di immettere un comando. Significa scrivere all'interno del terminale il testo del comando, facendo attenzione a
 lettere minuscole e maiuscole, e poi premere il tasto Invio.
 <P>
-Sar&agrave; necessario lavorare anche oltre l'orario dei laboratori. &Egrave; conveniente utilizzare un proprio
-portatile.
+Sar&agrave; necessario lavorare anche oltre l'orario dei laboratori. &Egrave; conveniente avere a disposizione un proprio
+computer su cui sia presente Linux.
     <H2> Utenti MacOS</H2>
     Il sistema operativo MacOS prende origine da un sistema Unix. Contiene nativamente la finestra di comandi e
     tutti i principali shell.
@@ -59,11 +59,11 @@ chiesta la vostra password prima di procedere). Questo far&agrave; diventare <B>
     <UL>
         <LI> Cliccate sull'icona <B>Start</B></LI>
         <LI> Nella finestra di ricerca digitare <B>cmd</B> oppure <B>prompt</B></LI>
-        <LI> Aprire il prompt dei comandi in modalit&agrave; amministratore facendo clic con il pulsante destro del mouse e selezionando "Esegui come amministratore", immettere il comando <B>wsl --install </B>(poi invio), quindi riavviare il computer.</LI>
+        <LI> Aprire il prompt dei comandi in modalit&agrave; amministratore, facendo clic con il pulsante destro del mouse e selezionando "Esegui come amministratore". Immettere il comando <B>wsl --install </B>(poi invio), quindi riavviare il computer.</LI>
     </UL>
 Questo comando consente di abilitare le funzionali&agrave; necessarie per eseguire <B>WSL</B> e installare la distribuzione <B>Ubuntu</B> di Linux con <B>bash</B> come shell di default<BR>
 La prima volta che si avvia una distribuzione Linux appena installata, verr&agrave; aperta una finestra della console e verr&agrave; chiesto di attendere il tempo necessario a decomprimere e archiviare i file nel computer. Tutti gli avvii successivi dovrebbero richiedere meno di un secondo.<BR>
-Vi verr&agrave; anche richiesto di inserire uno username e una password per WSL, che pu&ograve; essere diverse dallo username e password su Windows.
+Vi verr&agrave; anche richiesto di inserire uno username e una password per WSL, che pu&ograve; essere diverse dallo username e password per Windows.
 <BR>&nbsp;<BR>
 
 Per verificare quale versione di Linux state usando immettete il comando <B>lsb_release -a</B>.
