--- a/precorsoLinux.html
+++ b/precorsoLinux.html
@@ -59,10 +59,11 @@ chiesta la vostra password prima di procedere). Questo far&agrave; diventare <B>
     <UL>
         <LI> Cliccate sull'icona <B>Start</B></LI>
         <LI> Nella finestra di ricerca digitare <B>cmd</B> oppure <B>prompt</B></LI>
-        <LI> Aprire il prompt dei comandi in modalit&agrave; amministratore, facendo clic con il pulsante destro del mouse e selezionando "Esegui come amministratore". Immettere il comando <B>wsl --install </B>(poi invio), quindi riavviare il computer.</LI>
+        <LI> Aprire il prompt dei comandi in modalit&agrave; amministratore, facendo clic con il pulsante destro del mouse sull'icona, e selezionando "Esegui come amministratore". 
+        <LI> Immettere il comando <B>wsl --install </B>(poi invio), quindi riavviare il computer.</LI>
     </UL>
 Questo comando consente di abilitare le funzionali&agrave; necessarie per eseguire <B>WSL</B> e installare la distribuzione <B>Ubuntu</B> di Linux con <B>bash</B> come shell di default<BR>
-La prima volta che si avvia una distribuzione Linux appena installata, verr&agrave; aperta una finestra della console e verr&agrave; chiesto di attendere il tempo necessario a decomprimere e archiviare i file nel computer. Tutti gli avvii successivi dovrebbero richiedere meno di un secondo.<BR>
+La prima volta che si avvia una distribuzione Linux appena installata, verr&agrave; aperta una finestra di comandi e verr&agrave; chiesto di attendere il tempo necessario a decomprimere e archiviare i file nel computer. Tutti gli avvii successivi dovrebbero richiedere meno di un secondo.<BR>
 Vi verr&agrave; anche richiesto di inserire uno username e una password per WSL, che pu&ograve; essere diverse dallo username e password per Windows.
 <BR>&nbsp;<BR>
 
@@ -74,12 +75,15 @@ Il comando <B>wsl --install</B>, come default, installa soltanto l'interfaccia a
 <BR>&nbsp;<BR>
 <P>
     <H2> Per tutti gli utenti, per imparare qualsiasi sistema operativo o linguaggio di programmazione</H2>
-<UL>
+<FONT SIZE="+1"><B>
+    <UL>
 <LI> Non si pu&ograve; imparare a programmare mandando a memoria
 <LI> Non si pu&ograve; imparare a programmare soltando leggendo dei manuali o dei libri di testo
 <LI> Si impara solo facendo. Fare significa sedersi al computer, battere i comandi e, provando e riprovando,
 farli funzionare, ottenendo il risultato corretto
 </UL>
+</B></FONT>
+
 Di conseguenza il corso utilizza il metodo dell'Insegnamento Capovolto per massimizzare il tempo che passate
 davanti alla tastiera. Prima di ogni incontro vi verr&agrave; assegnato una parte del materiale che dovr&agrave;
 essere studiata prima di venire in classe. Gli incontri verranno dedicati a chiarire eventuali dubbi e a
