--- a/html/01_CourseInfo.html
+++ b/html/01_CourseInfo.html
@@ -7551,7 +7551,7 @@ a.anchor-link {
 <li>Start now, perfect it later. Molti dettagli importanti verranno lasciati da parte e ripresi in Introduzione alla Programmazione</li>
 </ul>
 <div style="padding:20px 20px 20px 150px;">
-<img align="center" alt="No description has been provided for this image" src="../Images/Programming_Languages.png" width="500"/>
+<img align="center" alt="No description has been provided for this image" src="../Images/top_programming_languages_2024.jpg" width="600"/>
 </div>
 <p>Il nome Python non deriva dal serpente pitone ma da una surreale serie comica trasmessa dalla BBC fra il 1969 e il 1974.</p>
 </div>
@@ -7567,6 +7567,7 @@ a.anchor-link {
 <div style="padding:20px 20px 0px 150px;">
 <img align="center" alt="No description has been provided for this image" src="../Humour/MontyPython.jpg" width="500"/>
 </div>
+ <br/>
 </div>
 </div>
 </div>
@@ -7577,7 +7578,9 @@ a.anchor-link {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h3 id="Scaricate-e-installate-la-distribuzione-Anaconda-da-https://www.anaconda.com/download-(Windows,Linux,Mac)-sul-vostro-laptop-prima-della-prossima-lezione.-Su-Windows-consiglio-fortemente-di-installare-prima-WSL-e-poi-scaricare-Anaconda-in-WSL.">Scaricate e installate la distribuzione Anaconda da <a href="https://www.anaconda.com/download">https://www.anaconda.com/download</a> (Windows,Linux,Mac) sul vostro laptop prima della prossima lezione. Su Windows consiglio fortemente di installare prima WSL e poi scaricare Anaconda in WSL.<a class="anchor-link" href="#Scaricate-e-installate-la-distribuzione-Anaconda-da-https://www.anaconda.com/download-(Windows,Linux,Mac)-sul-vostro-laptop-prima-della-prossima-lezione.-Su-Windows-consiglio-fortemente-di-installare-prima-WSL-e-poi-scaricare-Anaconda-in-WSL.">¶</a></h3>
+<div>
+<b> Scaricate e installate la distribuzione Anaconda da https://www.anaconda.com/download (Windows,Linux,Mac) sul vostro laptop prima della prossima lezione. Su Windows consiglio fortemente di installare prima WSL e poi scaricare Anaconda in WSL.</b>
+</div>
 </div>
 </div>
 </div>
@@ -7742,9 +7745,9 @@ in modo che io possa raggiungervi via mail per eventuali comunicazioni.</li>
 <h3 id="Strumenti-bibliografici-addizionali">Strumenti bibliografici addizionali<a class="anchor-link" href="#Strumenti-bibliografici-addizionali">¶</a></h3><p>Il materiale su Python sul web è talmente abbondante che diventa difficile raccapezzarsi. Non tutte le informazioni sono aggiornate.<br>
 Qualche suggerimento:<br/></br></p>
 <p>Tutorial di Python:<br/>
-<a href="https://docs.python.org/3/tutorial/">The Python Tutorial</a></p>
+<a href="https://docs.python.org/3/tutorial/index.html">The Python Tutorial</a></p>
 <p>Tutorial di Jupyter:<br/>
-<a href="https://realpython.com/jupyter-notebook-introduction/">Real Python: Jupyters Notebook: An Introduction</a></p>
+<a href="https://www.dataquest.io/blog/jupyter-notebook-tutorial/">Dataquest: Jupyter Notebook: An Introduction</a></p>
 <p>Libri/Lezioni:<br/>
 <a href="https://fangohr.github.io/teaching/python/book.html">Hans Fanghor - Python for Computational Science and Engineering</a><br/>
 <a href="http://raw.github.com/jrjohansson/scientific-python-lectures/master/Scientific-Computing-with-Python.pdf">Robert Johansson - Scientific Computing with Python</a><br/>
